Fix nginx issue

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -65,7 +65,7 @@ http {
       # If you don't find the filename in the static files
       # Then request it from the unicorn server
       if (!-f $request_filename) {
-        proxy_pass http://unicorn_server;
+        proxy_pass http://localhost;
         break;
       }
     }
