Never Mind one step back

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -65,14 +65,14 @@ http {
       # If you don't find the filename in the static files
       # Then request it from the unicorn server
       if (!-f $request_filename) {
-        proxy_pass http://localhost;
+        proxy_pass http://unicorn_server;
         break;
       }
     }
 
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-      root /home/CannaPages/public;
+      root /var/rails/testapp/public;
     }
   }
 }
