--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -43,7 +43,7 @@ http {
 
   upstream unicorn_server {
    # This is the socket we configured in unicorn.rb
-   server unix:/home/CannaPages/tmp/sockets/unicorn.sock »
+   server unix:/home/CannaPages/tmp/sockets/unicorn.sock fail_timeout=0;
    fail_timeout=0;
   }
 
