Removed non used assets

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,6 +7,14 @@ server {
  # server_name example.com;
  root /home/CannaPages/public; 
  try_files $uri/index.html $uri @unicorn;
+
+location ~ ^/(assets)/  {
+  root /path/to/public;
+  gzip_static on; # to serve pre-gzipped version
+  expires max;
+  add_header Cache-Control public;
+}
+
  location @unicorn {
    proxy_pass http://unicorn;
  }
