Changed look and feel

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,6 +31,24 @@ glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc37400
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
 growforum.png: growforum-2fdfbd3b39aeec85bd26c703fd11d475.png
 headeroverlay-01.png: headeroverlay-01-2ca1d7e892cbf939d95e223f50a5801f.png
+icons/Untitled-3_04.png: icons/Untitled-3_04-f7a1112df0ac141762c09efbd40ee86c.png
+icons/cadets-top-clicked.png: icons/cadets-top-clicked-f9bee7b9cf96c5eada72fe873885374b.png
+icons/cadets-top-hover.png: icons/cadets-top-hover-4c6ffb9842aecc8610527c59bbc2ed41.png
+icons/cadets-top.png: icons/cadets-top-efbb0e197b4155da442fbd539d8f1a16.png
+icons/critiques-top-clicked.png: icons/critiques-top-clicked-918d4d050a65397abe826507ca5fa322.png
+icons/critiques-top-hover.png: icons/critiques-top-hover-9a487b8a562286d541c960195e63ded4.png
+icons/critiques-top.png: icons/critiques-top-7e6c387854078d77a901a88dd4680f08.png
+icons/engine-top-clicked.png: icons/engine-top-clicked-7bdff8af08e5afa4820f8efbf376d557.png
+icons/engine-top-hover.png: icons/engine-top-hover-a082ade14fe9edd9957c16be98caf62d.png
+icons/engine-top.png: icons/engine-top-b0489900d4740cdd9c1a39e6ad663469.png
+icons/news-top-clicked.png: icons/news-top-clicked-b58555efd0fb65e3acc85ec46c33eb35.png
+icons/news-top-hover.png: icons/news-top-hover-ab136ccb9ab81d1caed37235ea459b49.png
+icons/news-top.png: icons/news-top-1ae9e7692696608f0e1e08e8d0314871.png
+icons/saver-top-clicked.png: icons/saver-top-clicked-e6466477b399c85f38fcd5eb356647a6.png
+icons/saver-top-hover.png: icons/saver-top-hover-888757feaef637151038e21edb320085.png
+icons/saver-top.png: icons/saver-top-1c7f3cbf2acfdf485f3b6981cc55b6d4.png
+icons/wiki-top-clicked.png: icons/wiki-top-clicked-567efe83b258bdb484f19ce8041f243f.png
+icons/wiki-top-hover.png: icons/wiki-top-hover-67adcd6aa7eee047a0be4b6ecf934c55.png
 masterbackend-01.png: masterbackend-01-dd8d1e7739170a0378e5009b3c8da71b.png
 medicate_370x240.png: medicate_370x240-1d3d58aa506929730173de08da0e87db.png
 menuicons-01.png: menuicons-01-26863100c91dce5c7b558e169528fc97.png
@@ -50,9 +68,11 @@ slider/save.png: slider/save-5c6c423f86e794aa0b2550148e1e9366.png
 slider1_770x240-01.png: slider1_770x240-01-a439de5864065b64ff1a2aa8f5b1dee0.png
 straincyclopedia.png: straincyclopedia-f539d4e3c99f455795ad4057b8f067df.png
 thumbtack_special.png: thumbtack_special-7c0cda0f0d2802c8cb98505a6869d5bb.png
+top-logo.png: top-logo-3326d3191e1e127b00d1e2e7f5ff8235.png
 userreviews.png: userreviews-1c7cdb25068655b779b8a21942bfa4e1.png
-application.js: application-264037b686c10651cbef5c246b92201f.js
-application.css: application-63fa89a65d5cbff65c3b4d0b96933fb4.css
+application.js: application-957ba5dba2bf662ab319c1306e3f3c70.js
+application.css: application-18bcf97b3ee963a3e80bc8b04918940f.css
+cadets.css: cadets-aaee3057d7aeee00810192837fb7a73c.css
 fontawesome-webfont.eot: fontawesome-webfont-7cf1b0de49e2f8672c9ad6d9e382115f.eot
 fontawesome-webfont.svg: fontawesome-webfont-4d19fdd70a080778557b652cb4868557.svg
 fontawesome-webfont.ttf: fontawesome-webfont-1e29be0bb354c9f664cbca7df9a966d8.ttf
